@@ -18,6 +18,7 @@
 
 package org.apache.hadoop.dfs;
 
+import java.io.FileNotFoundException;
 import java.io.InputStream;
 import java.io.IOException;
 
@@ -192,7 +193,7 @@ public class HftpFileSystem extends FileSystem {
     public FileStatus getFileStatus(Path f) throws IOException {
       fetchList(f.toUri().getPath(), false);
       if (fslist.size() == 0) {
-        throw new IOException("File does not exist: " + f);
+        throw new FileNotFoundException("File does not exist: " + f);
       }
       return fslist.get(0);
     }
